--- a/index.html
+++ b/index.html
@@ -36,10 +36,16 @@
         <button id="login" class="btn btn-success">Enter</button>
       </div>
     </div>
+    <div>
+      <h1 id="transaction-area">Transaction Area</h1>
+    </div>
     <script>
       const loginBtn = document.getElementById("login");
       loginBtn.addEventListener("click", function () {
-        console.log("amake click marse");
+        const loginArea = document.getElementById("login-area");
+        loginArea.style.display = "none";
+        const transactionArea = document.getElementById("transaction-area");
+        transactionArea.style.display = "block";
       });
     </script>
   </body>
