--- a/index.html
+++ b/index.html
@@ -36,10 +36,58 @@
         <button id="login" class="btn btn-success">Enter</button>
       </div>
     </div>
-    <div>
-      <h1 id="transaction-area">Transaction Area</h1>
+    <div id="transaction-area">
+      <div class="row">
+        <div class="col-md-4">
+          <div class="deposit status">
+            <h5>deposit</h5>
+            <h2>$ <span id="currentDeposit">000</span></h2>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="withdraw status">
+            <h5>Withdraw</h5>
+            <h2>$ 000</h2>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="balance status">
+            <h5>Balance</h5>
+            <h2>$ <span id="currentBalance">1200</span></h2>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="submit-area">
+            <h4>Deposit</h4>
+            <input
+              id="depositAmount"
+              class="form-control"
+              type="text"
+              placeholder="Deposit amount in $"
+            /><br /><button id="addDeposit" class="btn btn-success">
+              Deposit
+            </button>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="submit-area">
+            <h4>Withdraw</h4>
+            <input
+              id="withdrawAmount"
+              class="form-control"
+              type="text"
+              placeholder="Withdraw amount in $"
+            /><br /><button id="addWithdraw" class="btn btn-success">
+              Withdraw
+            </button>
+          </div>
+        </div>
+      </div>
     </div>
     <script>
+      // login button event handler
       const loginBtn = document.getElementById("login");
       loginBtn.addEventListener("click", function () {
         const loginArea = document.getElementById("login-area");
@@ -47,6 +95,48 @@
         const transactionArea = document.getElementById("transaction-area");
         transactionArea.style.display = "block";
       });
+
+      //deposit button event handler
+      const depositBtn = document.getElementById("addDeposit");
+      depositBtn.addEventListener("click", function () {
+        // const depositAmount = document.getElementById("depositAmount").value;
+        // const depositNumber = parseFloat(depositAmount);
+        const depositNumber = getInputNumber("depositAmount");
+
+        // const currentDeposit = document.getElementById("currentDeposit")
+        //   .innerText;
+        // const currentDepositNumber = parseFloat(currentDeposit);
+        // const totalDeposit = depositNumber + currentDepositNumber;
+
+        // document.getElementById("currentDeposit").innerText = totalDeposit;
+        updateSpanText("currentDeposit", depositNumber);
+
+        updateSpanText("currentBalance", depositNumber);
+
+        document.getElementById("depositAmount").value = "";
+      });
+
+      // withdraw button event handler
+      const withdrawBtn = document.getElementById("addWithdraw");
+      withdrawBtn.addEventListener("click", function () {
+        // const withdrawAmount = document.getElementById("withdrawAmount").value;
+        // const withdrawNumber = parseFloat(withdrawAmount);
+        const withdrawNumber = getInputNumber("withdrawAmount");
+        console.log(withdrawNumber);
+      });
+      function getInputNumber(id) {
+        const amount = document.getElementById(id).value;
+        const amountNumber = parseFloat(amount);
+        return amountNumber;
+      }
+
+      function updateSpanText(id, depositNumber) {
+        const current = document.getElementById(id).innerText;
+        const currentNumber = parseFloat(current);
+        const totalAmount = depositNumber + currentNumber;
+
+        document.getElementById(id).innerText = totalAmount;
+      }
     </script>
   </body>
 </html>
