--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="col-md-4">
           <div class="withdraw status">
             <h5>Withdraw</h5>
-            <h2>$ 000</h2>
+            <h2>$ <span id="currentWithdraw">000</span></h2>
           </div>
         </div>
         <div class="col-md-4">
@@ -123,6 +123,12 @@
         // const withdrawNumber = parseFloat(withdrawAmount);
         const withdrawNumber = getInputNumber("withdrawAmount");
         console.log(withdrawNumber);
+
+        updateSpanText("currentWithdraw", withdrawNumber);
+
+        updateSpanText("currentBalance", -1 * withdrawNumber);
+
+        document.getElementById("withdrawAmount").value = "";
       });
       function getInputNumber(id) {
         const amount = document.getElementById(id).value;
